--- a/react-app/src/components/MenuItemCard/MenuItemCard.css
+++ b/react-app/src/components/MenuItemCard/MenuItemCard.css
@@ -18,6 +18,8 @@
 .menu-item-name {
     font-size: 16px;
     font-weight: 700;
+    width: 192px;
+    word-wrap: break-word;
 }
 
 .menu-item-price {
